accessible font size
closes #31

--- a/css/reset.css
+++ b/css/reset.css
@@ -167,6 +167,7 @@ a:active {
 body {
   background-color: transparent;
   color: black;
+  font-size: 100%;
   font-stretch: normal;
   font-style: normal;
   font-variant: normal;
