--- a/less/classes.less
+++ b/less/classes.less
@@ -417,7 +417,7 @@ This file contains DLx styles that need to be explicitly specified using classes
     .blue-background;
     flex-direction: row;
     flex-wrap: wrap;
-    font-size: 1.25rem;
+    font-size: 1.25em;
     justify-content: space-around;
 
     li {
@@ -439,13 +439,13 @@ This file contains DLx styles that need to be explicitly specified using classes
 
     counter-increment: numbered;
     display: list-item;
-    margin-left: 2.5rem;
+    margin-left: 2.5em;
 
     &::before {
       content: counter(numbered) '.';
       font-weight: bold;
-      margin-left: -2.5rem;
-      padding: 0rem 0.5em;
+      margin-left: -2.5em;
+      padding: 0em 0.5em;
     }
 
   }
