--- a/css/classes.css
+++ b/css/classes.css
@@ -1097,7 +1097,7 @@ This file contains DLx styles that need to be explicitly specified using classes
   color: white;
   flex-direction: row;
   flex-wrap: wrap;
-  font-size: 1.25rem;
+  font-size: 1.25em;
   justify-content: space-around;
 }
 .nav ul a {
@@ -1132,13 +1132,13 @@ This file contains DLx styles that need to be explicitly specified using classes
 .numbered li {
   counter-increment: numbered;
   display: list-item;
-  margin-left: 2.5rem;
+  margin-left: 2.5em;
 }
 .numbered li::before {
   content: counter(numbered) '.';
   font-weight: bold;
-  margin-left: -2.5rem;
-  padding: 0rem 0.5em;
+  margin-left: -2.5em;
+  padding: 0em 0.5em;
 }
 .orthographic {
   font-family: 'Gentium Plus', 'Charis SIL', 'Doulos SIL', 'Cambria', 'Andika', 'Lucida Sans Unicode', 'Times New Roman', 'Georgia', serif;
