--- a/css/patterns.css
+++ b/css/patterns.css
@@ -173,6 +173,7 @@ a:active {
 body {
   background-color: transparent;
   color: black;
+  font-size: 100%;
   font-stretch: normal;
   font-style: normal;
   font-variant: normal;
@@ -1412,7 +1413,7 @@ This file contains DLx styles that need to be explicitly specified using classes
   color: white;
   flex-direction: row;
   flex-wrap: wrap;
-  font-size: 1.25rem;
+  font-size: 1.25em;
   justify-content: space-around;
 }
 .nav ul a {
@@ -1447,13 +1448,13 @@ This file contains DLx styles that need to be explicitly specified using classes
 .numbered li {
   counter-increment: numbered;
   display: list-item;
-  margin-left: 2.5rem;
+  margin-left: 2.5em;
 }
 .numbered li::before {
   content: counter(numbered) '.';
   font-weight: bold;
-  margin-left: -2.5rem;
-  padding: 0rem 0.5em;
+  margin-left: -2.5em;
+  padding: 0em 0.5em;
 }
 .orthographic {
   font-family: 'Gentium Plus', 'Charis SIL', 'Doulos SIL', 'Cambria', 'Andika', 'Lucida Sans Unicode', 'Times New Roman', 'Georgia', serif;
