--- a/less/fonts.less
+++ b/less/fonts.less
@@ -1,46 +1,92 @@
+@path: 'https://digitallinguistics.blob.core.windows.net/fonts';
+
 // Fira Sans
 @font-face {
   font-family: 'Fira Sans';
   src:
     local('Fira Sans Light'),
-    url('../fonts/FiraSans-Light.woff2') format('woff2'),
-    url('../fonts/FiraSans-Light.woff') format('woff');
+    url('@{path}/fonts/FiraSans-Light.woff2') format('woff2'),
+    url('@{path}/fonts/FiraSans-Light.woff') format('woff');
   font-display: fallback;
   font-style: normal;
-  font-weight: normal;
+  font-weight: 300;
 }
 
 @font-face {
   font-family: 'Fira Sans';
   src:
     local('Fira Sans Light Italic'),
-    url('../fonts/FiraSans-LightItalic.woff2') format('woff2'),
-    url('../fonts/FiraSans-LightItalic.woff') format('woff');
+    url('@{path}/fonts/FiraSans-LightItalic.woff2') format('woff2'),
+    url('@{path}/fonts/FiraSans-LightItalic.woff') format('woff');
   font-display: fallback;
   font-style: italic;
-  font-weight: normal;
+  font-weight: 300;
+}
+
+@font-face {
+  font-family: 'Fira Sans';
+  src:
+    local('Fira Sans Regular'),
+    url('@{path}/fonts/FiraSans-Regular.woff2') format('woff2'),
+    url('@{path}/fonts/FiraSans-Regular.woff') format('woff');
+  font-display: fallback;
+  font-style: normal;
+  font-weight: 400;
+}
+
+@font-face {
+  font-family: 'Fira Sans';
+  src:
+    local('Fira Sans Regular Italic'),
+    url('@{path}/fonts/FiraSans-RegularItalic.woff2') format('woff2'),
+    url('@{path}/fonts/FiraSans-RegularItalic.woff') format('woff');
+  font-display: fallback;
+  font-style: italic;
+  font-weight: 400;
 }
 
 @font-face {
   font-family: 'Fira Sans';
   src:
     local('Fira Sans Medium'),
-    url('../fonts/FiraSans-Medium.woff2') format('woff2'),
-    url('../fonts/FiraSans-Medium.woff') format('woff');
+    url('@{path}/fonts/FiraSans-Medium.woff2') format('woff2'),
+    url('@{path}/fonts/FiraSans-Medium.woff') format('woff');
   font-display: fallback;
   font-style: normal;
-  font-weight: bold;
+  font-weight: 500;
 }
 
 @font-face {
   font-family: 'Fira Sans';
   src:
     local('Fira Sans Medium Italic'),
-    url('../fonts/FiraSans-MediumItalic.woff2') format('woff2'),
-    url('../fonts/FiraSans-MediumItalic.woff') format('woff');
+    url('@{path}/fonts/FiraSans-MediumItalic.woff2') format('woff2'),
+    url('@{path}/fonts/FiraSans-MediumItalic.woff') format('woff');
   font-display: fallback;
   font-style: italic;
-  font-weight: bold;
+  font-weight: 500;
+}
+
+@font-face {
+  font-family: 'Fira Sans';
+  src:
+    local('Fira Sans SemiBold'),
+    url('@{path}/FiraSans-SemiBold.woff2') format('woff2'),
+    url('@{path}/FiraSans-SemiBold.woff') format('woff');
+  font-display: fallback;
+  font-style: normal;
+  font-weight: 600;
+}
+
+@font-face {
+  font-family: 'Fira Sans';
+  src:
+    local('Fira Sans SemiBold Italic'),
+    url('@{path}/FiraSans-SemiBoldItalic.woff2') format('woff2'),
+    url('@{path}/FiraSans-SemiBoldItalic.woff') format('woff');
+  font-display: fallback;
+  font-style: italic;
+  font-weight: 600;
 }
 
 // Fira Mono
@@ -48,22 +94,22 @@
   font-family: 'Fira Mono';
   src:
     local('Fira Mono Regular'),
-    url('../fonts/FiraMono-Regular.woff2') format('woff2'),
-    url('../fonts/FiraMono-Regular.woff') format('woff');
+    url('@{path}/fonts/FiraMono-Regular.woff2') format('woff2'),
+    url('@{path}/fonts/FiraMono-Regular.woff') format('woff');
   font-display: fallback;
   font-style: normal;
-  font-weight: normal;
+  font-weight: 400;
 }
 
 @font-face {
   font-family: 'Fira Mono';
   src:
     local('Fira Mono Bold'),
-    url('../fonts/FiraMono-Bold.woff2') format('woff2'),
-    url('../fonts/FiraMono-Bold.woff') format('woff');
+    url('@{path}/fonts/FiraMono-Bold.woff2') format('woff2'),
+    url('@{path}/fonts/FiraMono-Bold.woff') format('woff');
   font-display: fallback;
   font-style: normal;
-  font-weight: bold;
+  font-weight: 600;
 }
 
 // Gentium Plus
@@ -71,20 +117,20 @@
   font-family: 'Gentium Plus';
   src:
     local('Gentium Plus Regular'),
-    url('../fonts/GentiumPlus-R.woff2') format('woff2'),
-    url('../fonts/GentiumPlus-R.woff') format('woff');
+    url('@{path}/fonts/GentiumPlus-R.woff2') format('woff2'),
+    url('@{path}/fonts/GentiumPlus-R.woff') format('woff');
   font-display: swap;
   font-style: normal;
-  font-weight: normal;
+  font-weight: 400;
 }
 
 @font-face {
   font-family: 'Gentium Plus';
   src:
     local('Gentium Plus Italic'),
-    url('../fonts/GentiumPlus-I.woff2') format('woff2'),
-    url('../fonts/GentiumPlus-I.woff') format('woff');
+    url('@{path}/fonts/GentiumPlus-I.woff2') format('woff2'),
+    url('@{path}/fonts/GentiumPlus-I.woff') format('woff');
   font-display: swap;
   font-style: italic;
-  font-weight: normal;
+  font-weight: 400;
 }
