add new fonts to pattern library

--- a/examples/h-minor.hbs
+++ b/examples/h-minor.hbs
@@ -1,1 +1,2 @@
-<h1 class=h-minor>Minor Header</h1>
+<h1 class=h-minor>Minor Header (Fira Sans Regular)</h1>
+<h1 class=h-minor style="font-weight: 300;">Minor Header (Fira Sans Light)</h1>
