--- a/examples/h-subsection.hbs
+++ b/examples/h-subsection.hbs
@@ -1,1 +1,2 @@
-<h1 class=h-subsection>Subsection Header</h1>
+<h1 class=h-subsection>Subsection Header (Fira Sans Regular)</h1>
+<h1 class=h-subsection style="font-weight: 300;">Subsection Header (Fira Sans Light)</h1>
