--- a/examples/page-title.hbs
+++ b/examples/page-title.hbs
@@ -1,3 +1,2 @@
-<h1 class=page-title>
-  Page Title
-</h1>
+<h1 class=page-title>Page Title (Fira Sans Regular)</h1>
+<h1 class=page-title style="font-weight: 300;">Page Title (Fira Sans Light)</h1>
