--- a/hbs/partials/typography.hbs
+++ b/hbs/partials/typography.hbs
@@ -2,14 +2,26 @@
 
   <h1 class=h-section>Typography</h1>
 
-  <p class=hanging-indent><strong>Fira Sans Light</strong> (<em>not</em> Fira Sans Regular) is the default font used throughout DLx tools, with a line height of 1.5.</p>
-  <p class=hanging-indent style="font-style: italic;"><strong>Fira Sans Light Italic</strong> is used for italics.</p>
-  <p class=hanging-indent style="font-weight: bold;"><strong>Fira Sans Medium</strong> (<em>not</em> Fira Sans Bold) is used for bold styling.</p>
-  <p class=hanging-indent style="font-style: italic; font-weight: bold;"><strong>Fira Sans Medium Italic</strong> is used for the combination of bold and italics.</p>
+  <p class=hanging-indent><strong>Fira Sans Regular</strong> is the default font used throughout DLx tools, with a line height of 1.5. At larger sizes this font tends to look bold, in which case it may be a good idea to use Fira Sans Light (<code>font-weight: 300;</code>) instead.</p>
+
+  <p class=hanging-indent style="font-style: italic;"><strong>Fira Sans Italic</strong> is used for italics.</p>
+
+  <p class=hanging-indent style="font-weight: bold;"><strong>Fira Sans SemiBold</strong> (<em>not</em> Fira Sans Bold) is used for bold styling.</p>
+
+  <p class=hanging-indent style="font-style: italic; font-weight: bold;"><strong>Fira Sans SemiBold Italic</strong> is used for the combination of bold and italics.</p>
+
+  <p class=hanging-indent style="font-weight: 300;"><strong>Fira Sans Light</strong> (<code>font-weight: 300;</code>) may also be used for the default font, depending on what weight suits the page best. It provides a slimmer and slightly less bulky font profile, which is especially good for large headings.</p>
+
+  <p class=hanging-indent style="font-style: italic; font-weight: 300;"><strong>Fira Sans Light Italic</strong> is the italicized version of Fira Sans Light.</p>
+
   <p class=hanging-indent style="font-family: 'Fira Mono';"><strong>Fira Mono</strong> is used for monospaced code blocks.</p>
+
   <p class=hanging-indent style="font-family: 'Fira Mono'; font-weight: bold;"><strong>Fira Mono Bold</strong> is used for emphasized or bolded code.</p>
+
   <p class='hanging-indent unicode'><strong>Gentium Plus Regular</strong> is used for text that needs to support Unicode characters, such as data input fields.</p>
+
   <p class='hanging-indent unicode' style="font-style: italic;"><strong>Gentium Plus Italic</strong> is used for italicized text that requires Unicode support, such as inline citation of data.</p>
+
   <p class=hanging-indent>Gentium Fonts are also enlarged slightly so that <span class=unicode>they can be used inline</span> in stretches of Fira Sans text without too much of a size disparity.</p>
 
 </section>
