--- a/less/classes.less
+++ b/less/classes.less
@@ -545,5 +545,6 @@ This file contains DLx styles that need to be explicitly specified using classes
 .unicode {
   font-family: 'Gentium Plus', 'Charis SIL', 'Doulos SIL', 'Cambria', 'Andika', 'Lucida Sans Unicode', 'Times New Roman', 'Georgia', serif;
   font-size: 1.15em;
-  line-height: 1;
+  // QUESTION: Why was this here originally?
+  // line-height: 1;
 }
