--- a/examples/h-section.hbs
+++ b/examples/h-section.hbs
@@ -1,1 +1,2 @@
-<h1 class=h-section>Section Header</h1>
+<h1 class=h-section>Section Header (Fira Sans SemiBold)</h1>
+<h1 class=h-section style="font-weight: 500;">Section Header (Fira Sans Medium)</h1>
