--- a/examples/h-subsubsection.hbs
+++ b/examples/h-subsubsection.hbs
@@ -1,1 +1,2 @@
-<h1 class=h-subsubsection>Sub-Subsection Header</h1>
+<h1 class=h-subsubsection>Sub-Subsection Header (Fira Sans Regular)</h1>
+<h1 class=h-subsubsection style="font-weight: 300;">Sub-Subsection Header (Fira Sans Light)</h1>
