--- a/less/patterns.less
+++ b/less/patterns.less
@@ -8,6 +8,7 @@ body {
 
   > label[for=nav] {
     align-items: flex-start;
+    background-color: white;
     flex-direction: column;
     padding: 1em;
     position: fixed;
