--- a/css/colors.css
+++ b/css/colors.css
@@ -8,6 +8,7 @@ This file contains LESS variables for each of the colors in the DLx color schema
   --blue: #3399FF;
   --lightblue: #5CAFFF;
   --verylightblue: #88C4FE;
+  --codegray: #FAFAFA;
   --darkgray: gray;
   --gray: #CCC;
   --lightgray: #F5F2F0;
