--- a/css/fonts.css
+++ b/css/fonts.css
@@ -1,84 +1,91 @@
+:root {
+  --font-display: fallback;
+  --font-display-critical: swap;
+  --font-family: var(--font-family);
+  --font-family-mono: 'Fira Sans Mono';
+  --font-family-unicode: 'Gentium Plus';
+}
 @font-face {
-  font-family: 'Fira Sans';
+  font-family: var(--font-family);
   src: local('Fira Sans Light'), url('https://digitallinguistics.blob.core.windows.net/fonts/fonts/FiraSans-Light.woff2') format('woff2'), url('https://digitallinguistics.blob.core.windows.net/fonts/fonts/FiraSans-Light.woff') format('woff');
-  font-display: fallback;
+  font-display: var(--font-display);
   font-style: normal;
   font-weight: 300;
 }
 @font-face {
-  font-family: 'Fira Sans';
+  font-family: var(--font-family);
   src: local('Fira Sans Light Italic'), url('https://digitallinguistics.blob.core.windows.net/fonts/fonts/FiraSans-LightItalic.woff2') format('woff2'), url('https://digitallinguistics.blob.core.windows.net/fonts/fonts/FiraSans-LightItalic.woff') format('woff');
-  font-display: fallback;
+  font-display: var(--font-display);
   font-style: italic;
   font-weight: 300;
 }
 @font-face {
-  font-family: 'Fira Sans';
+  font-family: var(--font-family);
   src: local('Fira Sans Regular'), url('https://digitallinguistics.blob.core.windows.net/fonts/fonts/FiraSans-Regular.woff2') format('woff2'), url('https://digitallinguistics.blob.core.windows.net/fonts/fonts/FiraSans-Regular.woff') format('woff');
-  font-display: fallback;
+  font-display: var(--font-display);
   font-style: normal;
   font-weight: 400;
 }
 @font-face {
-  font-family: 'Fira Sans';
+  font-family: var(--font-family);
   src: local('Fira Sans Regular Italic'), url('https://digitallinguistics.blob.core.windows.net/fonts/fonts/FiraSans-RegularItalic.woff2') format('woff2'), url('https://digitallinguistics.blob.core.windows.net/fonts/fonts/FiraSans-RegularItalic.woff') format('woff');
-  font-display: fallback;
+  font-display: var(--font-display);
   font-style: italic;
   font-weight: 400;
 }
 @font-face {
-  font-family: 'Fira Sans';
+  font-family: var(--font-family);
   src: local('Fira Sans Medium'), url('https://digitallinguistics.blob.core.windows.net/fonts/fonts/FiraSans-Medium.woff2') format('woff2'), url('https://digitallinguistics.blob.core.windows.net/fonts/fonts/FiraSans-Medium.woff') format('woff');
-  font-display: fallback;
+  font-display: var(--font-display);
   font-style: normal;
   font-weight: 500;
 }
 @font-face {
-  font-family: 'Fira Sans';
+  font-family: var(--font-family);
   src: local('Fira Sans Medium Italic'), url('https://digitallinguistics.blob.core.windows.net/fonts/fonts/FiraSans-MediumItalic.woff2') format('woff2'), url('https://digitallinguistics.blob.core.windows.net/fonts/fonts/FiraSans-MediumItalic.woff') format('woff');
-  font-display: fallback;
+  font-display: var(--font-display);
   font-style: italic;
   font-weight: 500;
 }
 @font-face {
-  font-family: 'Fira Sans';
+  font-family: var(--font-family);
   src: local('Fira Sans SemiBold'), url('https://digitallinguistics.blob.core.windows.net/fonts/FiraSans-SemiBold.woff2') format('woff2'), url('https://digitallinguistics.blob.core.windows.net/fonts/FiraSans-SemiBold.woff') format('woff');
-  font-display: fallback;
+  font-display: var(--font-display);
   font-style: normal;
   font-weight: 600;
 }
 @font-face {
-  font-family: 'Fira Sans';
+  font-family: var(--font-family);
   src: local('Fira Sans SemiBold Italic'), url('https://digitallinguistics.blob.core.windows.net/fonts/FiraSans-SemiBoldItalic.woff2') format('woff2'), url('https://digitallinguistics.blob.core.windows.net/fonts/FiraSans-SemiBoldItalic.woff') format('woff');
-  font-display: fallback;
+  font-display: var(--font-display);
   font-style: italic;
   font-weight: 600;
 }
 @font-face {
-  font-family: 'Fira Mono';
+  font-family: var(--font-family-mono);
   src: local('Fira Mono Regular'), url('https://digitallinguistics.blob.core.windows.net/fonts/fonts/FiraMono-Regular.woff2') format('woff2'), url('https://digitallinguistics.blob.core.windows.net/fonts/fonts/FiraMono-Regular.woff') format('woff');
-  font-display: fallback;
+  font-display: var(--font-display);
   font-style: normal;
   font-weight: 400;
 }
 @font-face {
-  font-family: 'Fira Mono';
+  font-family: var(--font-family-mono);
   src: local('Fira Mono Bold'), url('https://digitallinguistics.blob.core.windows.net/fonts/fonts/FiraMono-Bold.woff2') format('woff2'), url('https://digitallinguistics.blob.core.windows.net/fonts/fonts/FiraMono-Bold.woff') format('woff');
-  font-display: fallback;
+  font-display: var(--font-display);
   font-style: normal;
   font-weight: 600;
 }
 @font-face {
-  font-family: 'Gentium Plus';
+  font-family: var(--font-family-unicode);
   src: local('Gentium Plus Regular'), url('https://digitallinguistics.blob.core.windows.net/fonts/fonts/GentiumPlus-R.woff2') format('woff2'), url('https://digitallinguistics.blob.core.windows.net/fonts/fonts/GentiumPlus-R.woff') format('woff');
-  font-display: swap;
+  font-display: var(--font-display-critical);
   font-style: normal;
   font-weight: 400;
 }
 @font-face {
-  font-family: 'Gentium Plus';
+  font-family: var(--font-family-unicode);
   src: local('Gentium Plus Italic'), url('https://digitallinguistics.blob.core.windows.net/fonts/fonts/GentiumPlus-I.woff2') format('woff2'), url('https://digitallinguistics.blob.core.windows.net/fonts/fonts/GentiumPlus-I.woff') format('woff');
-  font-display: swap;
+  font-display: var(--font-display-critical);
   font-style: italic;
   font-weight: 400;
 }
