--- a/less/colors.less
+++ b/less/colors.less
@@ -12,6 +12,7 @@ This file contains LESS variables for each of the colors in the DLx color schema
   --lightblue:                 #5CAFFF;
   --verylightblue:             #88C4FE;
 
+  --codegray:                  #FAFAFA;
   --darkgray:                  gray;
   --gray:                      #CCC;
   --lightgray:                 #F5F2F0;
