--- a/less/fonts.less
+++ b/less/fonts.less
@@ -1,136 +1,147 @@
 @path: 'https://digitallinguistics.blob.core.windows.net/fonts';
 
+:root {
+
+  --font-display: fallback;
+  --font-display-critical: swap;
+
+  --font-family: var(--font-family);
+  --font-family-mono: 'Fira Sans Mono';
+  --font-family-unicode: 'Gentium Plus';
+
+}
+
 // Fira Sans
 @font-face {
-  font-family: 'Fira Sans';
+  font-family: var(--font-family);
   src:
     local('Fira Sans Light'),
     url('@{path}/fonts/FiraSans-Light.woff2') format('woff2'),
     url('@{path}/fonts/FiraSans-Light.woff') format('woff');
-  font-display: fallback;
+  font-display: var(--font-display);
   font-style: normal;
   font-weight: 300;
 }
 
 @font-face {
-  font-family: 'Fira Sans';
+  font-family: var(--font-family);
   src:
     local('Fira Sans Light Italic'),
     url('@{path}/fonts/FiraSans-LightItalic.woff2') format('woff2'),
     url('@{path}/fonts/FiraSans-LightItalic.woff') format('woff');
-  font-display: fallback;
+  font-display: var(--font-display);
   font-style: italic;
   font-weight: 300;
 }
 
 @font-face {
-  font-family: 'Fira Sans';
+  font-family: var(--font-family);
   src:
     local('Fira Sans Regular'),
     url('@{path}/fonts/FiraSans-Regular.woff2') format('woff2'),
     url('@{path}/fonts/FiraSans-Regular.woff') format('woff');
-  font-display: fallback;
+  font-display: var(--font-display);
   font-style: normal;
   font-weight: 400;
 }
 
 @font-face {
-  font-family: 'Fira Sans';
+  font-family: var(--font-family);
   src:
     local('Fira Sans Regular Italic'),
     url('@{path}/fonts/FiraSans-RegularItalic.woff2') format('woff2'),
     url('@{path}/fonts/FiraSans-RegularItalic.woff') format('woff');
-  font-display: fallback;
+  font-display: var(--font-display);
   font-style: italic;
   font-weight: 400;
 }
 
 @font-face {
-  font-family: 'Fira Sans';
+  font-family: var(--font-family);
   src:
     local('Fira Sans Medium'),
     url('@{path}/fonts/FiraSans-Medium.woff2') format('woff2'),
     url('@{path}/fonts/FiraSans-Medium.woff') format('woff');
-  font-display: fallback;
+  font-display: var(--font-display);
   font-style: normal;
   font-weight: 500;
 }
 
 @font-face {
-  font-family: 'Fira Sans';
+  font-family: var(--font-family);
   src:
     local('Fira Sans Medium Italic'),
     url('@{path}/fonts/FiraSans-MediumItalic.woff2') format('woff2'),
     url('@{path}/fonts/FiraSans-MediumItalic.woff') format('woff');
-  font-display: fallback;
+  font-display: var(--font-display);
   font-style: italic;
   font-weight: 500;
 }
 
 @font-face {
-  font-family: 'Fira Sans';
+  font-family: var(--font-family);
   src:
     local('Fira Sans SemiBold'),
     url('@{path}/FiraSans-SemiBold.woff2') format('woff2'),
     url('@{path}/FiraSans-SemiBold.woff') format('woff');
-  font-display: fallback;
+  font-display: var(--font-display);
   font-style: normal;
   font-weight: 600;
 }
 
 @font-face {
-  font-family: 'Fira Sans';
+  font-family: var(--font-family);
   src:
     local('Fira Sans SemiBold Italic'),
     url('@{path}/FiraSans-SemiBoldItalic.woff2') format('woff2'),
     url('@{path}/FiraSans-SemiBoldItalic.woff') format('woff');
-  font-display: fallback;
+  font-display: var(--font-display);
   font-style: italic;
   font-weight: 600;
 }
 
 // Fira Mono
 @font-face {
-  font-family: 'Fira Mono';
+  font-family: var(--font-family-mono);
   src:
     local('Fira Mono Regular'),
     url('@{path}/fonts/FiraMono-Regular.woff2') format('woff2'),
     url('@{path}/fonts/FiraMono-Regular.woff') format('woff');
-  font-display: fallback;
+  font-display: var(--font-display);
   font-style: normal;
   font-weight: 400;
 }
 
 @font-face {
-  font-family: 'Fira Mono';
+  font-family: var(--font-family-mono);
   src:
     local('Fira Mono Bold'),
     url('@{path}/fonts/FiraMono-Bold.woff2') format('woff2'),
     url('@{path}/fonts/FiraMono-Bold.woff') format('woff');
-  font-display: fallback;
+  font-display: var(--font-display);
   font-style: normal;
   font-weight: 600;
 }
 
 // Gentium Plus
 @font-face {
-  font-family: 'Gentium Plus';
+  font-family: var(--font-family-unicode);
   src:
     local('Gentium Plus Regular'),
     url('@{path}/fonts/GentiumPlus-R.woff2') format('woff2'),
     url('@{path}/fonts/GentiumPlus-R.woff') format('woff');
-  font-display: swap;
+  font-display: var(--font-display-critical);
   font-style: normal;
   font-weight: 400;
 }
 
 @font-face {
-  font-family: 'Gentium Plus';
+  font-family: var(--font-family-unicode);
   src:
     local('Gentium Plus Italic'),
     url('@{path}/fonts/GentiumPlus-I.woff2') format('woff2'),
     url('@{path}/fonts/GentiumPlus-I.woff') format('woff');
-  font-display: swap;
+  font-display: var(--font-display-critical);
   font-style: italic;
   font-weight: 400;
 }
