--- a/less/global.less
+++ b/less/global.less
@@ -23,7 +23,7 @@ abbr { .abbr; }
 
 body {
   box-sizing: border-box;
-  font-family: 'Fira Sans', 'Calibri', 'DejaVu Sans', 'Verdana', 'Arial', 'Helvetica', sans-serif;
+  font-family: var(--font);
   line-height: 1.5;
 }
 
@@ -50,13 +50,3 @@ select { .select; }
 strong { .strong; }
 
 textarea { .textarea; }
-
-// .tooltip
-// elements whose contents are typically inline
-blockquote, button, caption, dd, dt, figcaption, h1, h2, h3, h4, h5, h6, input, legend, option, output, p, pre, select, summary, textarea,
-// inline elements
-abbr, acronym, b, bdo, big, br, cite, code, del, dfn, em, i, ins, kbd, mark, q, samp, s, small, span, strike, strong, sub, sup, time, tt, var, {
-  > .tooltip {
-    text-decoration: underline dotted var(--verydarkgreen);
-  }
-}
