--- a/less/patterns.less
+++ b/less/patterns.less
@@ -3,7 +3,6 @@
 body {
 
   align-items: center;
-  line-height: 1.5;
   padding: 2rem;
 
   > label[for=nav] {
@@ -27,7 +26,7 @@ body {
   align-items: center;
   flex-direction: row;
   justify-content: space-between;
-  padding: 0.25em 0em;
+  padding: var(--padding-text);
 
   span {
     align-items: flex-start;
