--- a/less/colors.less
+++ b/less/colors.less
@@ -2,10 +2,30 @@
 This file contains LESS variables for each of the colors in the DLx color schema
  */
 
+// Colors
+//
+// The following colors are available as CSS variables and classes. To set the font color, use `.{color}` (e.g. ``.wugblue`). To set the background color, use `.{color}-background` (e.g. `.wugblue-background`).
+//
+// Styleguide Colors
+
 :root {
 
+  // Wug Blue
+  //
+  // $wugblue - #6FD1F6; wug blue
+  //
+  // Styleguide Colors.wug
   --wugblue:                   #6FD1F6;
 
+  // Blue
+  //
+  // $verydarkblue - #017CF2; very dark blue
+  // $darkblue - #0F89FF; dark blue
+  // $blue - #3399FF; blue
+  // $lightblue - #5CAFFF; light blue
+  // $verylightblue - #88C4FE; very light blue
+  //
+  // Styleguide Colors.blue
   --verydarkblue:              #017CF2;
   --darkblue:                  #0F89FF;
   --blue:                      #3399FF;
