--- a/less/colors.less
+++ b/less/colors.less
@@ -6,6 +6,8 @@ This file contains LESS variables for each of the colors in the DLx color schema
 //
 // The following colors are available as CSS variables and classes. To set the font color, use `.{color}` (e.g. ``.wugblue`). To set the background color, use `.{color}-background` (e.g. `.wugblue-background`).
 //
+// Weight: 2
+//
 // Styleguide Colors
 
 :root {
@@ -14,29 +16,55 @@ This file contains LESS variables for each of the colors in the DLx color schema
   //
   // $wugblue - #6FD1F6; wug blue
   //
-  // Styleguide Colors.wug
+  // Weight: 1
+  //
+  // Styleguide Colors.Wug
   --wugblue:                   #6FD1F6;
 
   // Blue
   //
-  // $verydarkblue - #017CF2; very dark blue
-  // $darkblue - #0F89FF; dark blue
-  // $blue - #3399FF; blue
-  // $lightblue - #5CAFFF; light blue
+  // $verydarkblue  - #017CF2; very dark blue
+  // $darkblue      - #0F89FF; dark blue
+  // $blue          - #3399FF; blue
+  // $lightblue     - #5CAFFF; light blue
   // $verylightblue - #88C4FE; very light blue
   //
-  // Styleguide Colors.blue
+  // Weight: 2
+  //
+  // Styleguide Colors.Blue
   --verydarkblue:              #017CF2;
   --darkblue:                  #0F89FF;
   --blue:                      #3399FF;
   --lightblue:                 #5CAFFF;
   --verylightblue:             #88C4FE;
 
+  // Gray
+  //
+  // $codegray  - #FAFAFA; code gray
+  // $darkgray  - #808080; dark gray
+  // $gray      - #CCC; gray
+  // $lightgray - #F5F2F0; light gray
+  //
+  // Weight: 3
+  //
+  // Styleguide Colors.Gray
   --codegray:                  #FAFAFA;
   --darkgray:                  gray;
   --gray:                      #CCC;
   --lightgray:                 #F5F2F0;
 
+  // Green
+  //
+  // $verylightgreen - #7FFED1; very light green
+  // $lightgreen     - #4FFFC1; light green
+  // $green          - #23FFB1; green
+  // $darkgreen      - #00FFA5; dark green
+  // $verydarkgreen  - #00F39D; very dark green
+  // $superdarkgreen - #00AB6E; super dark green
+  //
+  // Weight: 4
+  //
+  // Styleguide Colors.Green
   --verylightgreen:            #7FFED1;
   --lightgreen:                #4FFFC1;
   --green:                     #23FFB1;
@@ -44,23 +72,63 @@ This file contains LESS variables for each of the colors in the DLx color schema
   --verydarkgreen:             #00F39D;
   --superdarkgreen:            #00AB6E;
 
+  // Orange
+  //
+  // $verylightorange - #FFA97F; very light orange
+  // $lightorange     - #FF884F; light orange
+  // $orange          - #FF6A23; orange
+  // $darkorange      - #FF5300; dark orange
+  //
+  // Weight: 5
+  //
+  // Styleguide Colors.Orange
   --verylightorange:           #FFA97F;
   --lightorange:               #FF884F;
   --orange:                    #FF6A23;
   --darkorange:                #FF5300;
 
+  // Purple
+  //
+  // $verylightpurple - #9791FE; very light purple
+  // $lightpurple     - #7068FF; light purple
+  // $purple          - #4D42FF; purple
+  // $darkpurple      - #2A1DFF; dark purple
+  // $verydarkpurple  - #1002F4; very dark purple
+  //
+  // Weight: 6
+  //
+  // Styleguide Colors.Purple
   --verylightpurple:           #9791FE;
   --lightpurple:               #7068FF;
   --purple:                    #4D42FF;
   --darkpurple:                #2A1DFF;
   --verydarkpurple:            #1002F4;
 
+  // Red
+  //
+  // $verylightred - #FF9797; very light red
+  // $lightred     - #E96363; light red
+  // $red          - #CA3C3C; red
+  // $darkred      - #AA1F1F; dark red
+  // $verydarkred  - #830505; very dark red
+  //
+  // Weight: 7
+  //
+  // Styleguide Colors.Red
   --verylightred:              #FF9797;
   --lightred:                  #E96363;
   --red:                       #CA3C3C;
   --darkred:                   #AA1F1F;
   --verydarkred:               #830505;
 
+  // Transparent
+  //
+  // $lightblue-transparent     - rgba(92, 175, 255, 0.2); light blue transparent
+  // $verylightblue-transparent - rgba(136, 196, 254, 0.2); light blue transparent
+  //
+  // Weight: 8
+  //
+  // Styleguide Colors.Transparent
   --lightblue-transparent:     rgba(92, 175, 255, 0.2);
   --verylightblue-transparent: rgba(136, 196, 254, 0.2);
 
