--- a/less/fonts.less
+++ b/less/fonts.less
@@ -11,7 +11,32 @@
 
 }
 
+
+// Typography
+//
+// These are the primary fonts used in DLx projects. Other fonts may be used as appropriate when representing linguistic data; however, fonts used for actual DLx interfaces should be limited to the ones shown here.
+//
+// Weight: 1
+//
+// Styleguide Typography
+
+
 // Fira Sans
+//
+// The Fira Sans set of fonts (developed by Mozilla) are the primary fonts used for DLx interfaces.
+//
+// Weight: 1
+//
+// Styleguide Typography.FiraSans
+
+// Fira Sans Light
+//
+// Markup:
+// <p style="font-family: 'Fira Sans'; font-weight: 300;"><strong style="font-weight: 500;">Fira Sans Light</strong> (<code>font-weight: 300;</code>) may also be used for the default font, depending on what weight suits the page best. It provides a slimmer and slightly less bulky font profile, which is especially good for large headings.</p>
+//
+// Weight: 5
+//
+// Styleguide Typography.FiraSans.Light
 @font-face {
   font-family: var(--font-family);
   src:
@@ -23,6 +48,14 @@
   font-weight: 300;
 }
 
+// Fira Sans Light Italic
+//
+// Markup:
+// <p style="font-family: 'Fira Sans'; font-weight: 300; font-style: italic;"><strong style="font-weight: 500;">Fira Sans Light Italic</strong> is the italicized version of Fira Sans Light.</p>
+//
+// Weight: 6
+//
+// Styleguide Typography.FiraSans.LightItalic
 @font-face {
   font-family: var(--font-family);
   src:
@@ -34,6 +67,14 @@
   font-weight: 300;
 }
 
+// Fira Sans Regular
+//
+// Markup:
+// <p style="font-family: 'Fira Sans';"><strong>Fira Sans Regular</strong> is the default font used throughout DLx tools, with a line height of 1.5. At larger sizes this font tends to look bold, in which case it may be a good idea to use Fira Sans Light (<code>font-weight: 300;</code>) instead.</p>
+//
+// Weight: 1
+//
+// Styleguide Typography.FiraSans.Regular
 @font-face {
   font-family: var(--font-family);
   src:
@@ -45,6 +86,14 @@
   font-weight: 400;
 }
 
+// Fira Sans Regular Italic
+//
+// Markup:
+// <p style="font-family: 'Fira Sans'; font-style: italic;"><strong>Fira Sans Regular Italic</strong> is used for italics.</p>
+//
+// Weight: 2
+//
+// Styleguide Typography.FiraSans.RegularItalic
 @font-face {
   font-family: var(--font-family);
   src:
@@ -56,6 +105,14 @@
   font-weight: 400;
 }
 
+// Fira Sans Medium
+//
+// Markup:
+// <p style="font-family: 'Fira Sans'; font-weight: 500;"><strong style="font-weight: 500;">Fira Sans Medium</strong> (<code>font-weight: 500;</code>) is used as the bold version of Fira Sans Light.</p>
+//
+// Weight: 7
+//
+// Styleguide Typography.FiraSans.Medium
 @font-face {
   font-family: var(--font-family);
   src:
@@ -67,6 +124,14 @@
   font-weight: 500;
 }
 
+// Fira Sans Medium Italic
+//
+// Markup:
+// <p style="font-family: 'Fira Sans'; font-style: italic; font-weight: 500;"><strong style="font-weight: 500;">Fira Sans Medium Italic</strong> is used as the bold version of Fira Sans Light Italic.</p>
+//
+// Weight: 8
+//
+// Styleguide Typography.FiraSans.MediumItalic
 @font-face {
   font-family: var(--font-family);
   src:
@@ -78,6 +143,14 @@
   font-weight: 500;
 }
 
+// Fira Sans SemiBold
+//
+// Markup:
+// <p style="font-family: 'Fira Sans'; font-weight: bold;"><strong>Fira Sans SemiBold</strong> is used as the bold version of Fira Sans Regular.</p>
+//
+// Weight: 3
+//
+// Styleguide Typography.FiraSans.SemiBold
 @font-face {
   font-family: var(--font-family);
   src:
@@ -89,6 +162,14 @@
   font-weight: 600;
 }
 
+// Fira Sans SemiBold Italic
+//
+// Markup:
+// <p style="font-family: 'Fira Sans'; font-weight: bold; font-style: italic;"><strong>Fira Sans SemiBold Italic</strong> is used as the bold version of Fira Sans Regular Italic.</p>
+//
+// Weight: 4
+//
+// Styleguide Typography.FiraSans.SemiBoldItalic
 @font-face {
   font-family: var(--font-family);
   src:
@@ -100,7 +181,23 @@
   font-weight: 600;
 }
 
+
 // Fira Mono
+//
+// The Fira Mono set of fonts (developed by Mozilla) are used for representing code blocks and other monospaced text.
+//
+// Weight: 2
+//
+// Styleguide Typography.FiraMono
+
+// Fira Mono Regular
+//
+// Markup:
+// <p style="font-family: 'Fira Mono';"><strong>Fira Mono</strong> is used for monospaced code blocks.</p>
+//
+// Weight: 1
+//
+// Styleguide Typography.FiraMono.Regular
 @font-face {
   font-family: var(--font-family-mono);
   src:
@@ -112,6 +209,14 @@
   font-weight: 400;
 }
 
+// Fira Mono Bold
+//
+// Markup:
+// <p style="font-family: 'Fira Mono'; font-weight: bold;"><strong>Fira Mono Bold</strong> is used for emphasized or bolded code.</p>
+//
+// Weight: 2
+//
+// Styleguide Typography.FiraMono.Bold
 @font-face {
   font-family: var(--font-family-mono);
   src:
@@ -123,7 +228,23 @@
   font-weight: 600;
 }
 
+
 // Gentium Plus
+//
+// The Gentium Plus fonts (developed by SIL) are used for representing linguistic data.
+//
+// Weight: 3
+//
+// Styleguide Typography.GentiumPlus
+
+// Gentium Plus Regular
+//
+// Markup:
+// <p class=unicode><strong>Gentium Plus Regular</strong> is used for text that needs to support Unicode characters, such as data input fields.</p>
+//
+// Weight: 1
+//
+// Styleguide Typography.GentiumPlus.Regular
 @font-face {
   font-family: var(--font-family-unicode);
   src:
@@ -135,6 +256,14 @@
   font-weight: 400;
 }
 
+// Gentium Plus Regular Italic
+//
+// Markup:
+// <p class=unicode style="font-style: italic;"><strong>Gentium Plus Regular Italic</strong> is used for italicized text that requires Unicode support, such as inline citation of data.</p>
+//
+// Weight: 2
+//
+// Styleguide Typography.GentiumPlus.Italic
 @font-face {
   font-family: var(--font-family-unicode);
   src:
